Alignement correction

--- a/CSS/projets.css
+++ b/CSS/projets.css
@@ -184,4 +184,5 @@ section h1 {
 
 .contact-box {
     text-decoration: none;
+    width: 20px;
 }
