--- a/CSS/quisuisje.css
+++ b/CSS/quisuisje.css
@@ -195,4 +195,5 @@ section h1 {
 
 .contact-box {
     text-decoration: none;
+    width: 20px;
 }
