--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -207,4 +207,5 @@ section h1 {
 }
 .contact-box {
     text-decoration: none;
+    width: 20px;
 }
